@@ -877,10 +877,11 @@ Products page (+home page)
 	border-radius: 0.2rem;
 	margin-left: 0.5rem;
 	background-color: var(--clr-error-solid);
-	padding: 0.5rem;
+	padding: 0.25rem;
 }
 
 .product--card-on-sale {
+	margin-bottom: 0.25rem;
 }
 
 .product--card-details {
